<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stop 1070</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <!-- Generic Dialog -->
    <string name="dialog_submit">Submit</string>
    <string name="dialog_ok">OK!</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- MainActivity -->
    <string name="report_btn">Report</string>
    <string name="rights_btn">Know Your Rights</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="change_language">En Español</string>
    <string name="change_language_dialog_title">Cambiar el Idioma</string>
    <string name="change_language_dialog_body">Usted puede cambiar el idioma del dispositivo para ver esta aplicación en Inglés.</string>
    <!-- ActionBar Menu -->
    <string name="menu_view_reports">Reports</string>

    <!-- FormActivity -->
    <string name="personal_tab">Personal</string>
    <string name="incident_tab">Incident</string>
    <!-- Clear Personal Info Dialog -->
    <string name="clear_personal_info_dialog_title">Clear Personal Info?</string>
    <string name="clear_personal_info_dialog_msg">This will delete all personal info saved for use on this form. You\'ll have to re-enter the personal info form the next time you file a report.</string>
    <string name="clear_personal_info_ok_btn">Clear Personal Info</string>

    <!-- Pre-Form Disclaimer -->
    <string name="pre_form_disclaimer">Note: This form does not give legal advice, and you should not rely on it as legal advice. This form is not an offer by the ACLU to represent you. You should not rely on the information you get from this site and should speak with a lawyer to get advice on your specific situation. We also cannot promise that the information on this site is complete, accurate, or up-to-date. For children under 13, this survey must be completed by your parent or guardian.</string>
    
    <!-- Form Incomplete Dialog -->
    <string name="form_incomplete_dialog_title">Form Incomplete</string>
    <string name="form_incomplete_dialog_msg">Please check the form for highligted fields. At a minimum we need your full name, your zipcode, the incident location, date, and description.</string>
    <!-- ActionBar Menu -->
    <string name="menu_clear_personal">Clear Personal Info</string>
    <string name="menu_submit_form">Submit</string>
    <string name="menu_amend_form">Amend</string>
    <string name="menu_about">About</string>

    <!-- Personal Form Fragment -->
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="address_label">Street Address</string>
    <string name="address1_hint">ex: 12 Main St</string>
    <string name="address2_hint">ex: Apt 7</string>
    <string name="city_label">City</string>
    <string name="state_label">State</string>
    <string name="zipcode_label">Zipcode</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="alt_phone_label">Alternative Phone</string>

    <!-- Incident Form Fragment -->
    <string name="agency_label">Agency</string>
    <string name="agency_hint">Ex. Police, sheriff, department of public safety, ICE, border patrol.</string>
    <string name="location_label">Location</string>
    <string name="date_label">Date and Time</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="narrative_label">What Happened?</string>
    <string name="narrative_hint">Please tell us about your experience with racial profiling, arrest or detention under SB 1070. </string>
    <!-- Location Toggle Button for API < 14 -->
    <string name="gps_label">Send current location</string>
    <string name="gps_on_label">Current location will be sent</string>
    <string name="gps_off_label">Current location will not be sent</string>
    <!-- Location Switch for API 14+ -->
    <string name="on">On</string>
    <string name="off">Off</string>
    <!-- Form Errors -->
    <string name="required_field_error">This field is required</string>

    <!-- Form Disclaimer -->
    <string name="form_disclaimer">We respect your privacy and will only use the contact information you provide to contact you regarding the complaint you submit today. Other than that, we will never send unsolicited email, or share personal information you submit. For further information, see our privacy statement.</string>
    <!-- Form Success -->
    <string name="form_success_title">Report Submitted!</string>
    <string name="form_success">Thanks for sharing your story. We\'ll keep the specific details of your story confidential unless we contact you and get your permission to share it.</string>

    <!-- Incident ListView -->
    <string name="loading_incidents">Loading Incidents</string>
    <string name="no_incidents">No Incidents Saved</string>
    <string name="incident_submitted">Submitted</string>
    <string name="incident_not_submitted">Not Submitted</string>
    <string name="title_activity_rights">RightsActivity</string>

    <!-- Rights Activity -->
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="always">General</string>
    <string name="car">Car</string>
    <string name="home">Home</string>
    <string name="street">Street</string>
    <string name="jail">Jail</string>
    <string name="title_activity_pdfview">PDFViewActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="call_aclu_dialog_title">Call the ACLU-AZ?</string>
    <string name="call_aclu_dialog_call">Call</string>
    <string name="general_rights">
       	 &lt;h1>SB1070 Section 2(B): What is it?&lt;/h1>
		Section 2(B)requires the police to ask someone they have already stopped about their immigration status if they think the person may be undocumented. However, even under SB 1070, it is illegal for the police to stop someone, or to detain them for a long time, if it\'s only to investigate their immigration status.&lt;br/>&lt;br/>
   		Never provide fake documents or state that you are a U.S citizen if you are not. &lt;br/>&lt;br/>
		If you are detained or arrested, you always have the right to remain silent and the right to speak to an attorney.&lt;br/>&lt;br/>
		You do not have to give information about where you were born, how you entered the U.S or how long you have been here.&lt;br/>&lt;br/>
		Create an action plan in case you are arrested that includes the phone number of an attorney. Have that number with you at all times.&lt;br/>&lt;br/>
    	
    	For additional info call the ACLU at 1-855-225-8291 (1-855-ACLUAZ-1) or 602-650-1854 in Maricopa County.
    </string>
    <string name="car_rights">
        &lt;h1>Anywhere in the Car &lt;/h1>
        Once a citation is given and the driver\'s license has been returned, the officer may not continue to detain the driver or question a passenger unless they suspect some other crime.
        
        &lt;h1>As a Driver &lt;/h1>
        If you do not have a license, you may be asked to provide your name and date of birth or some other form of identification.&lt;br/>&lt;br/>
		The police can give you a citation and release you if you fail to provide a license but it discretionary, which means they can still arrest you. &lt;br/>&lt;br/>
		It is best not to show documents from another country. If you have a valid license or immigration document, show it.
		
		 &lt;h1>As a Passenger &lt;/h1>
		It is not a crime for a passenger to be without identification.&lt;br/>&lt;br/>
		The police can ask you for identification or other questions unrelated to the stop but they cannot stop you for a long time to do so OR require you to comply unless they suspect you have committed a crime.&lt;br/>&lt;br/>
		Arizona law only requires that you give the police your "true full name", not date of birth, address, social security number or other information.
	</string>
	<string name="street_rights">Police can ask for identification if they encounter you on the street but they can\'t require it unless they suspect you have committed a crime. &lt;br/>&lt;br/>
		If you are not arrested, you can ask whether you are free to leave, and if not, you should ask to speak to an attorney and remain silent.&lt;br/>&lt;br/>
		Arizona law only requires that you give the police your "true full name", not date of birth, address, social security number or other information.
	</string>
	<string name="home_rights">Police must have a warrant to enter your home.&lt;br/>&lt;br/>
		The warrant should have a description of the person or items they are searching for. &lt;br/>&lt;br/>
		If you don\'t want the police to enter, you do not have to open your door until they show you a warrant, which they can do by slipping it under the door. &lt;br/>&lt;br/>
		If you open the door and allow the police to come into the house, this could be considered giving permission to enter. Even if the police enter your home, everyone inside still has the right to remain silent.
	</string>
	<string name="jail_rights">If you are arrested and taken to jail you may be asked questions about where you were born, how you entered the U.S. or how long you\'ve been here. You do not have to answer these questions. This information can be used to detain and deport you.
	</string>
	
	
    <!-- About Activity -->
    <string name="powered_by">Powered By</string>
    <string name="about_text">SB 1070 requires the police to ask someone they have already stopped about their immigration status, if they think the person may be undocumented. However, even under SB 1070, it is illegal for the police to stop someone because of their race, ethnicity or the language they speak or to detain someone for a long time if it is only to investigate their immigration status.\n\nIt\'s important to remember that everyone has basic rights — including the right not to be profiled or discriminated against by the police — whether you have papers or not.\n\nWe can fight SB 1070 by collecting examples of people who were stopped and detained by law enforcement because of their race and cases where the detention was extended in order to check immigration status. If you\'ve experienced either, please tell us your story.</string>

</resources>