<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_background"
    android:orientation="vertical"
    android:weightSum="1.0"
    tools:context=".RightsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:background="@color/off_white"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <!-- General -->

        <LinearLayout
            style="@style/KnowYourRightsHeaderLayout"
            android:onClick="generalClicked"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <ImageView
                style="@style/KnowYourRightsHeaderImage"
                android:src="@drawable/stickman" />

            <net.openwatch.acluaz.view.AutoResizeTextView
                style="@style/KnowYourRightsHeaderText"
                android:text="@string/always" />
        </LinearLayout>

        <!-- Car -->

        <LinearLayout
            style="@style/KnowYourRightsHeaderLayout"
            android:onClick="carClicked"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <ImageView
                style="@style/KnowYourRightsHeaderImage"
                android:src="@drawable/driving" />

            <net.openwatch.acluaz.view.AutoResizeTextView
                style="@style/KnowYourRightsHeaderText"
                android:text="@string/car" />
        </LinearLayout>

        <!-- Street -->

        <LinearLayout
            style="@style/KnowYourRightsHeaderLayout"
            android:onClick="streetClicked"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <ImageView
                style="@style/KnowYourRightsHeaderImage"
                android:src="@drawable/street" />

            <net.openwatch.acluaz.view.AutoResizeTextView
                style="@style/KnowYourRightsHeaderText"
                android:text="@string/street" />
        </LinearLayout>

        <!-- Home -->

        <LinearLayout
            style="@style/KnowYourRightsHeaderLayout"
            android:onClick="homeClicked"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <ImageView
                style="@style/KnowYourRightsHeaderImage"
                android:src="@drawable/home" />

            <net.openwatch.acluaz.view.AutoResizeTextView
                style="@style/KnowYourRightsHeaderText"
                android:text="@string/home" />
        </LinearLayout>

        <!-- Jail -->

        <LinearLayout
            style="@style/KnowYourRightsHeaderLayout"
            android:onClick="jailClicked"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <ImageView
                style="@style/KnowYourRightsHeaderImage"
                android:src="@drawable/jail" />

            <net.openwatch.acluaz.view.AutoResizeTextView
                style="@style/KnowYourRightsHeaderText"
                android:text="@string/jail" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/rights_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextSwitcher
                android:id="@+id/rights_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>